--- a/2.html
+++ b/2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Probably the most complete UI kit out there. Multiple functionalities and controls added,  extended color palette and beautiful typography, designed as its own extended version of Bootstrap at  the highest level of quality.                             ">
     <meta name="author" content="Webpixels">
-    <title>Eronmosele</title>
+    <title>Boomerang UI Kit - Free Bootstrap Framework by Webpixels</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700" rel="stylesheet">
     <!-- Theme CSS -->
@@ -992,7 +992,7 @@
                   </div>
                   <div class="col-lg-3 col-md-6">
                     <button type="button" class="btn btn-block btn-secondary" data-container="body" data-toggle="popover" data-color="secondary" data-placement="bottom" data-title="Please, help!" data-title="Please, help!" data-content="Vivamus
-                            sagittis lacus vel augue laoreet rutrum faucibus.">
+							sagittis lacus vel augue laoreet rutrum faucibus.">
                       Popover on bottom
                     </button>
                   </div>
