changed title of web page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Probably the most complete UI kit out there. Multiple functionalities and controls added,  extended color palette and beautiful typography, designed as its own extended version of Bootstrap at  the highest level of quality.                             ">
+    <meta name="description" content="I am eronomosele a fullsstack developer looking for opportunities to build amazing to products anad lead projects. I love working remotely">
     <meta name="author" content="Webpixels">
     <title>Eronmosele</title>
     <!-- Fonts -->
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-dark bg-dark py-4">
       <div class="container">
-        <a class="navbar-brand" href="./"><strong>Boomerang</strong> UI Kit</a>
+        <a class="navbar-brand" href="./"><strong>Eronmosele</strong></a>
         <button class="navbar-toggler" type="button" data-action="offcanvas-open" data-target="#navbar_main" aria-controls="navbar_main" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
