added new functiuons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-dark bg-dark py-4">
       <div class="container">
-        <a class="navbar-brand" href="./"><strong>Eronmosele</strong></a>
+        <a class="navbar-brand" href="./"><strong>Eronmosele.co</strong></a>
         <button class="navbar-toggler" type="button" data-action="offcanvas-open" data-target="#navbar_main" aria-controls="navbar_main" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,7 +24,7 @@
           <ul class="navbar-nav ml-auto align-items-lg-center">
             <h6 class="dropdown-header font-weight-600 d-lg-none px-0">Menu</h6>
             <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Overview</a>
+              <a class="nav-link" href="./index.html">Me</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbar_main_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
@@ -36,11 +36,11 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./docs/introduction.html">Docs</a>
+              <a class="nav-link" href="./docs/introduction.html">Laboratory</a>
             </li>
             <li class="nav-item">
-              <a href="https://github.com/webpixels/boomerang-ui-kit/archive/master.zip" target="_blank" class="nav-link d-lg-none">Download Free</a>
-              <a href="https://github.com/webpixels/boomerang-ui-kit/archive/master.zip" target="_blank" class="btn btn-sm bg-white d-none d-lg-inline-flex">Download Free</a>
+              <a href="https://github.com/webpixels/boomerang-ui-kit/archive/master.zip" target="_blank" class="nav-link d-lg-none">Hypothesis</a>
+              <a href="https://github.com/webpixels/boomerang-ui-kit/archive/master.zip" target="_blank" class="btn btn-sm bg-white d-none d-lg-inline-flex">Hypothesis</a>
             </li>
             <div class="dropdown-divider d-lg-none my-4"></div>
             <h6 class="dropdown-header font-weight-600 d-lg-none px-0">Social Media</h6>
@@ -49,9 +49,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link nav-link-icon" href="https://web.facebook.com/webpixels" target="_blank"><i class="fab fa-facebook"></i><span class="ml-2 d-lg-none">Facebook</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link nav-link-icon" href="https://dribbble.com/webpixels" target="_blank"><i class="fab fa-dribbble"></i><span class="ml-2 d-lg-none">Dribbble</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link nav-link-icon" href="https://github.com/webpixels" target="_blank"><i class="fab fa-github"></i><span class="ml-2 d-lg-none">Github</span></a>
@@ -71,11 +68,20 @@
                   <div class="text-center mt-5">
                     <img src="assets/images/brand/icon.png" style="width: 200px;" class="img-fluid animated" data-animation-in="jackInTheBox" data-animation-delay="1000">
                     <h2 class="heading display-4 font-weight-400 text-white mt-5 animated" data-animation-in="fadeInUp" data-animation-delay="2000">
-                      <span class="font-weight-700">Boomerang</span> UI Kit
+                      <span class="font-weight-700">Hi</span> i am Eronmosele
                     </h2>
                     <p class="lead text-white mt-3 lh-180 c-white animated" data-animation-in="fadeInUp" data-animation-delay="2500">
-                      Free HTML UI Kit based on the well known Bootstrap 4 Framework brought to you by <strong class="text-white">Webpixels</strong>
+                      A fullstack developer i believe logic and data lives on the backend but inspiration comes from the frontend
+                      <strong class="text-white"> i am interested in building the next billion dollar app(web or mobile)</strong>
                     </p>
+                    <h3 class="text-white">You can find me here : </h3>
+                    <h3>
+                      <a class="text-white" href="https://instagram.com/webpixelsofficial/" target="_blank"><i class="fab fa-instagram"></i><span class="ml-2 d-lg-none">Instagram</span></a>
+
+                      <a class="text-white" href="https://web.facebook.com/webpixels" target="_blank"><i class="fab fa-facebook"></i><span class="ml-2 d-lg-none">Facebook</span></a>
+
+                      <a class="text-white" href="https://github.com/webpixels" target="_blank"><i class="fab fa-github"></i><span class="ml-2 d-lg-none">Github</span></a>
+                    </h3>
                   </div>
                 </div>
               </div>
@@ -146,7 +152,7 @@
                   <a href="docs/colors.html" class="btn btn-sm btn-primary">Open in Docs</a>
                 </div>
               </div>
-              <p>Boomerang has extended the color palette that Bootstrap offers by default. Instead of two primary colors, you get now three. These can be easily customized using the included Sass files.</p>
+              <p>Boomerang has extended the color palette that Bootstrap offers by default. Instead of two primary colors, you get now three. These can be easily customized using the included Sass files.</p> 
               <div class="row-wrapper">
                 <h3 class="heading h6 text-uppercase text-primary mt-5 mb-4">Primary colors</h3>
                 <div class="row color-palette cols-xs-space cols-sm-space cols-md-space">
